<resources>
    <string name="app_name">MyApplication4</string>
    <string name="fitnuss">Fitness Guide</string>
    <string name="Forar">For arms</string>
    <string name="forleg">For legs</string>
    <string name="forch">For chest</string>
    <string name="arms1">Task 1 :</string>
    <string name="arms2">Task 2 :</string>
    <string name="arms3">Task 3 :</string>
    <string name="ches1">Task 1 :</string>
    <string name="ches2">Task 2 :</string>
    <string name="ches3">Task 3 :</string>
    <string name="leg1">Task 1 :</string>
    <string name="leg2">Task 2 :</string>
    <string name="leg3">Task 3 :</string>
    <string name="chest">Task 1 :</string>
    <string name="chestt">Task 2 :</string>
    <string name="chesttt">Task 3 :</string>
    <string name="legs">Task 1 :</string>
    <string name="legss">Task 2 :</string>
    <string name="legsss">Task 3 :</string>
    <string name="forarms">forearms</string>
    <string name="forearm">forearms</string>
    <string name="date">Date:</string>
    <string name="forearms">Forearms:</string>
    <string name="biceps">Biceps:</string>
    <string name="triceps">Triceps:</string>
    <string name="upper_chest">Upper_chest:</string>
    <string name="lower_chest">Lower_chest:</string>
    <string name="both">Both:</string>
    <string name="squat">Squat:</string>
    <string name="leg_press">Leg_press:</string>
    <string name="running_machine">Running_machine:</string>
    <string name="invalid_date">Please Enter  Date</string>
    <string name="button1">Start now</string>
    <string name="button2">Start now</string>
    <string name="button3">Start now</string>
    <string name="chest1">For chest</string>
    <string name="arms">For arms</string>
    <string name="legs1">For legs</string>
    <string name="stwp">Stop wishing start doing</string>
    <string name="play">Play</string>
    <string name="enter">Enter</string>
    <string name="enter1">Enter</string>
    <string name="forearms1">forearms</string>
</resources>