<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#e6ffff"

    android:layout_margin="2dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:background="@drawable/shape1"

        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Text"
            android:background="@drawable/shape"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_forearms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.806" />

        <TextView
            android:id="@+id/txt_forearms"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_biceps"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_forearms" />

        <TextView
            android:id="@+id/txt_triceps"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372" />

        <TextView
            android:id="@+id/txt_upper_chest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.456" />

        <TextView
            android:id="@+id/txt_lower_chest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_upper_chest" />

        <TextView
            android:id="@+id/txt_both"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_lower_chest" />

        <TextView
            android:id="@+id/txt_squat"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_both" />

        <TextView
            android:id="@+id/txt_leg_press"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/txt_running_machine"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="Text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.961"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"

            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.133" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="101dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="@string/forearms"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.213" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="@string/biceps"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="@string/triceps"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.385" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="124dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="@string/upper_chest"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.471" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="125dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="@string/lower_chest"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="125dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:text="@string/both"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="125dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:text="@string/squat"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.749" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="125dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/leg_press"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.849" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="176dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:text="@string/running_machine"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="370dp"
            android:layout_height="545dp"
            android:layout_marginTop="16dp"
            android:alpha="0.15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/denna" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_option"
        android:layout_width="20dp"
        android:layout_height="wrap_content"

        android:layout_gravity="right"
        android:text="&#8942;"
        android:textSize="30sp" />

</androidx.cardview.widget.CardView>